k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: helloworld

  template:
    metadata:
      labels:
        app: helloworld

    spec:
      containers:
        - name: helloworld-container
          image: helloworld-springboot:1.0

          ports:
            - containerPort: 8080
