k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service

spec:
  type: ClusterIP

  selector:
    app: helloworld

  ports:
    - port: 8080
      targetPort: 8080
